# DSSP

./: .gitignore  benchmark_dssp.py  benchmark_multifield_dssp.py  dssp.py  multifield_dssp.py  pyproject.toml  readme.md  readme.txt  requirements.txt  run_experiments.py  run_experiments_tifs.py  test_dssp.py
