[project]
name = "dssp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "graphviz>=0.21",
    "matplotlib==3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.3",
    "pycryptodome>=3.23.0",
    "pydot>=4.0.1",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
]
